2006-02-03  Darin Adler  <darin@apple.com>

        - updated test result due to revised fix for <ol> number

        * fast/lists/olstart-expected.txt: Updated.

2006-02-03  Andrew Wellington  <proton@wiretapped.net>

        Reviewed by Darin.
        
        Layout tests for bug 5776: Generated numbers of ordered lists (OL) are
        not calculated right

        * fast/lists/ol-display-types-expected.checksum: Added.
        * fast/lists/ol-display-types-expected.png: Added.
        * fast/lists/ol-display-types-expected.txt: Added.
        * fast/lists/ol-display-types.html: Added.
        * fast/lists/olstart-expected.checksum: Added.
        * fast/lists/olstart-expected.png: Added.
        * fast/lists/olstart-expected.txt: Added.
        * fast/lists/olstart.html: Added.

2006-02-03  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Dave Hyatt, Tim H.

        Layout tests for:
        Bug 4127: WebCore doesn't support Media Queries (CSS3 module)
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4127

        * ChangeLog:
        * fast/media: Added.
        * fast/media/001-expected.checksum: Added.
        * fast/media/001-expected.png: Added.
        * fast/media/001-expected.txt: Added.
        * fast/media/001.html: Added.
        * fast/media/002-expected.checksum: Added.
        * fast/media/002-expected.png: Added.
        * fast/media/002-expected.txt: Added.
        * fast/media/002.html: Added.
        * fast/media/003-expected.checksum: Added.
        * fast/media/003-expected.png: Added.
        * fast/media/003-expected.txt: Added.
        * fast/media/003.html: Added.
        * fast/media/004-expected.checksum: Added.
        * fast/media/004-expected.png: Added.
        * fast/media/004-expected.txt: Added.
        * fast/media/004.html: Added.
        * fast/media/005-expected.checksum: Added.
        * fast/media/005-expected.png: Added.
        * fast/media/005-expected.txt: Added.
        * fast/media/005.html: Added.